sip4 (4.19.13+dfsg-1) UNRELEASED; urgency=medium

  [ Ondřej Nový ]
  * Use 'python3 -m sphinx' instead of sphinx-build for building docs
  * d/watch: Use https protocol

  [ Dmitry Shachnev ]
  * New upstream release.

 -- Ondřej Nový <onovy@debian.org>  Mon, 27 Aug 2018 15:04:05 +0200

sip4 (4.19.12+dfsg-1) unstable; urgency=medium

  * Exclude sipgen/lexer.c and sipgen/parser.{c,h} from the tarball.
  * New upstream release.
    - Fixes segfault when -n option is not specified (closes: #903263).
  * Drop header_install.diff, applied upstream.
  * Bump API version to 12.5.
  * Build sipgen only once, not for every Python version.
  * Stop passing -e option to configure.py, the default value is fine.
  * Fix race condition when generating debian/sipconfig_py3.py.
  * Bump Standards-Version to 4.1.5, no changes needed.

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 08 Jul 2018 17:03:16 +0300

sip4 (4.19.11+dfsg-1) unstable; urgency=medium

  [ Ondřej Nový ]
  * d/control: Remove ancient X-Python-Version field
  * d/control: Remove ancient X-Python3-Version field

  [ Dmitry Shachnev ]
  * New upstream release.
  * Update debian/copyright.
  * Make python-sip depend on python-enum34.
  * Document the new -n option in sip.1 manpage.
  * Fix installation of siplib/sip.h.
  * Simplify installation code in debian/rules.
  * Bump Standards-Version to 4.1.4, no changes needed.

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 03 Jul 2018 22:24:52 +0300

sip4 (4.19.8+dfsg-1) unstable; urgency=medium

  [ Ondřej Nový ]
  * d/control: Set Vcs-* to salsa.debian.org

  [ Dmitry Shachnev ]
  * New upstream bugfix release.
  * Bump API version to 12.4.

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 10 Mar 2018 09:56:30 +0300

sip4 (4.19.7+dfsg-1) unstable; urgency=medium

  * New upstream bugfix release.
  * Bump years in debian/copyright.
  * Bump Standards-Version to 4.1.3, no changes needed.
  * Specify empty DH_OPTIONS when using dh_installdocs with -p argument.